crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__mother_of_runes_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Choose",
          "choice_type": "Color",
          "persist": false
        },
        "cost": {
          "type": "Tap"
        },
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "GenericEffect",
            "static_abilities": [
              {
                "mode": "Continuous",
                "affected": {
                  "type": "ParentTarget"
                },
                "modifications": [
                  {
                    "type": "AddKeyword",
                    "keyword": {
                      "Protection": "ChosenColor"
                    }
                  }
                ],
                "condition": null,
                "affected_zone": null,
                "effect_zone": null,
                "active_zones": [],
                "characteristic_defining": false,
                "description": "gain protection from the color of your choice"
              }
            ],
            "duration": "UntilEndOfTurn",
            "target": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": []
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "duration": "UntilEndOfTurn",
        "description": "{T}: Target creature you control gains protection from the color of your choice until end of turn.",
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    }
  ],
  "source_text": "{T}: Target creature you control gains protection from the color of your choice until end of turn.",
  "card_name": "Mother of Runes"
}
